# alip

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DAY3_COMPLETE.md  DEPLOYMENT_GUIDE.md  FIXES_v0.2.1.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INDEX.md  MENTOR_IMPROVEMENTS.md  MULTI_LANGUAGE_SUPPORT.md  Makefile  PRODUCTION_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TOPOLOGY_COMPLETE.md  TREE_SITTER_PRODUCTION.md  USAGE.md  cli.py  create_demo_data.py  pyproject.toml  requirements.txt  setup.py
agents/: cost_analysis.py  ingestion.py  risk_analysis.py  synthesis.py  topology.py
alip/: cli.py
core/: models.py  review_gate.py  skill_output.py  state_machine.py  utils.py
core/llm/: client.py
docs/: PRD_AI_Assisted_Legacy_Intelligence_Core.txt
prompts/cost_analysis/: system_prompt_v1.md
prompts/risk_analysis/: system_prompt_v1.md
prompts/synthesis/: system_prompt_v1.md
prompts/topology/: system_prompt_v1.md
skills/: ast_parser.py  database.py  documents.py  multi_language_extractor.py  repo.py  tree_sitter_extractor.py  tree_sitter_parser.py  workspace.py
tests/integration/: test_cost_analysis_workflow.py  test_e2e_complete_workflow.py  test_e2e_workflow.py  test_ingestion_workflow.py  test_risk_analysis_workflow.py  test_synthesis_workflow.py  test_topology_workflow.py
tests/unit/: test_ast_parser.py  test_cost_analysis.py  test_database.py  test_llm_client.py  test_multi_language_extractor.py  test_repo.py  test_risk_analysis.py  test_synthesis.py  test_utils.py  test_workspace.py
(+2 files in other folders)
